--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Registro Docente</string>
+    <string name="app_name_full">Registro del docente</string>
+    <string name="app_email">lampac@gmail.com</string>
+
     <string name="action_periodos">Periodos</string>
     <string name="action_clases">Clases</string>
     <string name="title_activity_login">Sign in</string>
@@ -25,4 +28,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
 </resources>
